RESOLVED FIXED99831
[Qt][WTR] renderToOffscreenBuffer should not be set if the real render loop is active
https://bugs.webkit.org/show_bug.cgi?id=99831
Summary [Qt][WTR] renderToOffscreenBuffer should not be set if the real render loop i...
Balazs Kelemen
Reported 2012-10-19 05:10:49 PDT
setRenderWithoutShowing and setRenderToOffscreenBuffer are overlapping and causing trouble, i.e. the early return in QQuickWebViewPrivate::setNeedsDisplay is wrong if the scene graph is active.
Attachments
Patch (3.35 KB, patch)
2012-10-19 05:35 PDT, Balazs Kelemen
no flags
Patch (4.18 KB, patch)
2012-10-19 07:40 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-10-19 05:35:05 PDT
Jocelyn Turcotte
Comment 2 2012-10-19 06:30:35 PDT
Comment on attachment 169604 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169604&action=review > Tools/WebKitTestRunner/qt/PlatformWebViewQt.cpp:88 > - QQuickWebViewExperimental experimental(m_view); > - experimental.setRenderToOffscreenBuffer(true); > + if (!windowShapshotEnabled()) { > + QQuickWebViewExperimental experimental(m_view); > + experimental.setRenderToOffscreenBuffer(true); > + } It would be cleaner to move it in the else of "if (PlatformWebView::windowShapshotEnabled())" in handleStatusChanged.
Balazs Kelemen
Comment 3 2012-10-19 07:40:09 PDT
Jocelyn Turcotte
Comment 4 2012-10-19 07:51:10 PDT
Comment on attachment 169618 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169618&action=review > Source/WebKit2/ChangeLog:8 > + Update the comment about renderToOffscreenBuffer to better describe it's role. it's -> its > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:445 > + // This can the case when running tests. See WTR::PlatformWebView::windowShapshotEnabled. I'm not sure what this line adds, there's a "be" missing, "when running tests" is repeated from above and windowShapshotEnabled is only indirectly related.
Balazs Kelemen
Comment 5 2012-10-19 08:48:03 PDT
(In reply to comment #4) > (From update of attachment 169618 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=169618&action=review > > > Source/WebKit2/ChangeLog:8 > > + Update the comment about renderToOffscreenBuffer to better describe it's role. > > it's -> its I think both are correct, but fixed :) > > > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:445 > > + // This can the case when running tests. See WTR::PlatformWebView::windowShapshotEnabled. > > I'm not sure what this line adds, there's a "be" missing, "when running tests" is repeated from above and windowShapshotEnabled is only indirectly related. Removed. Landed in http://trac.webkit.org/changeset/131904
Note You need to log in before you can comment on or make changes to this bug.