[Qt][WTR] renderToOffscreenBuffer should not be set if the real render loop is active https://bugs.webkit.org/show_bug.cgi?id=99831

Reviewed by Jocelyn Turcotte.

Source/WebKit2:

Update the comment about renderToOffscreenBuffer to better describe its role.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::setNeedsDisplay):

Tools:

Do not set renderToOffscreenBuffer if we have called setRenderWithoutShowing.
We do not need it in this case and these things are actually conflicting.

* WebKitTestRunner/qt/PlatformWebViewQt.cpp:
(WTR::WrapperWindow::handleStatusChanged):
(WTR::PlatformWebView::PlatformWebView):
(WTR::PlatformWebView::windowShapshotEnabled): Added a comment
describing why this workaround is needed.

Canonical link: https://commits.webkit.org/117840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131904 268f45cc-cd09-0410-ab3c-d52691b4dbfc